--- a/kde-base/kmilo/ChangeLog
+++ b/kde-base/kmilo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kmilo
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmilo/ChangeLog,v 1.97 2008/06/05 21:59:16 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmilo/ChangeLog,v 1.98 2008/06/07 11:58:49 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kmilo-3.5.8-r1.ebuild, -kmilo-4.0.2.ebuild, -kmilo-4.0.3.ebuild:
+  Removed old versions.
 
 *kmilo-4.0.5 (05 Jun 2008)
 
