--- a/kde-base/ksysv/ChangeLog
+++ b/kde-base/ksysv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ksysv
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ksysv/ChangeLog,v 1.54 2008/05/19 23:27:34 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ksysv/ChangeLog,v 1.55 2008/06/07 12:05:28 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -ksysv-3.5.8.ebuild:
+  Removed old versions.
 
   19 May 2008; Carsten Lohrke <carlo@gentoo.org> ksysv-3.5.9.ebuild:
   Stable on amd64 and x86.
