--- a/kde-base/kcoloredit/ChangeLog
+++ b/kde-base/kcoloredit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kcoloredit
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kcoloredit/ChangeLog,v 1.83 2008/05/18 17:00:00 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kcoloredit/ChangeLog,v 1.84 2008/06/07 12:13:38 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kcoloredit-3.5.8.ebuild, -kcoloredit-4.0.3.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kcoloredit-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
