--- a/kde-base/kvoctrain/ChangeLog
+++ b/kde-base/kvoctrain/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kvoctrain
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kvoctrain/ChangeLog,v 1.91 2008/05/18 17:13:57 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kvoctrain/ChangeLog,v 1.92 2008/06/07 12:15:29 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kvoctrain-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kvoctrain-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
