--- a/kde-base/kappfinder/ChangeLog
+++ b/kde-base/kappfinder/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kappfinder
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kappfinder/ChangeLog,v 1.93 2008/06/05 21:06:08 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kappfinder/ChangeLog,v 1.94 2008/06/07 12:16:21 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kappfinder-3.5.8.ebuild, -kappfinder-4.0.2.ebuild,
+  -kappfinder-4.0.3.ebuild:
+  Removed old versions.
 
 *kappfinder-4.0.5 (05 Jun 2008)
 
