--- a/kde-base/kmtrace/ChangeLog
+++ b/kde-base/kmtrace/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kmtrace
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmtrace/ChangeLog,v 1.60 2008/05/18 18:37:51 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmtrace/ChangeLog,v 1.61 2008/06/07 12:17:12 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kmtrace-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kmtrace-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
