--- a/app-office/gnotime/ChangeLog
+++ b/app-office/gnotime/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-office/gnotime
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/gnotime/ChangeLog,v 1.41 2008/04/05 13:58:20 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/gnotime/ChangeLog,v 1.42 2008/06/07 12:18:31 eva Exp $
+
+*gnotime-2.3.0-r2 (07 Jun 2008)
+
+  07 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  +files/gnotime-2.3.0-fix-columns.patch, +gnotime-2.3.0-r2.ebuild:
+  Fix column descriptions, bug #222325.
 
 *gnotime-2.3.0-r1 (05 Apr 2008)
 
