--- a/kde-base/kdesdk-kfile-plugins/ChangeLog
+++ b/kde-base/kdesdk-kfile-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdesdk-kfile-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-kfile-plugins/ChangeLog,v 1.64 2008/05/18 18:41:53 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-kfile-plugins/ChangeLog,v 1.65 2008/06/07 12:18:51 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdesdk-kfile-plugins-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   kdesdk-kfile-plugins-3.5.9.ebuild:
