--- a/kde-base/libkholidays/ChangeLog
+++ b/kde-base/libkholidays/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libkholidays
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkholidays/ChangeLog,v 1.83 2008/05/18 14:54:13 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkholidays/ChangeLog,v 1.84 2008/06/07 12:21:20 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -libkholidays-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> libkholidays-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
