--- a/kde-base/kdeartwork/ChangeLog
+++ b/kde-base/kdeartwork/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeartwork
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.213 2008/05/18 21:36:32 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.214 2008/06/07 12:22:13 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdeartwork-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdeartwork-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
