--- a/kde-base/kdeartwork-kwin-styles/ChangeLog
+++ b/kde-base/kdeartwork-kwin-styles/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeartwork-kwin-styles
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-kwin-styles/ChangeLog,v 1.85 2008/05/18 19:13:54 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-kwin-styles/ChangeLog,v 1.86 2008/06/07 12:27:18 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdeartwork-kwin-styles-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   kdeartwork-kwin-styles-3.5.9.ebuild:
