--- a/kde-base/libkdenetwork/ChangeLog
+++ b/kde-base/libkdenetwork/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libkdenetwork
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkdenetwork/ChangeLog,v 1.75 2008/05/18 14:39:50 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkdenetwork/ChangeLog,v 1.76 2008/06/07 12:28:59 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -libkdenetwork-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> libkdenetwork-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
