--- a/kde-base/kalyptus/ChangeLog
+++ b/kde-base/kalyptus/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kalyptus
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kalyptus/ChangeLog,v 1.58 2008/05/18 18:30:33 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kalyptus/ChangeLog,v 1.59 2008/06/07 12:34:01 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kalyptus-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kalyptus-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
