--- a/kde-base/kpackage/ChangeLog
+++ b/kde-base/kpackage/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kpackage
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kpackage/ChangeLog,v 1.54 2008/05/19 19:57:41 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpackage/ChangeLog,v 1.55 2008/06/07 12:35:43 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kpackage-3.5.8.ebuild:
+  Removed old versions.
 
   19 May 2008; Markus Meier <maekke@gentoo.org> kpackage-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
