--- a/kde-base/lilo-config/ChangeLog
+++ b/kde-base/lilo-config/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/lilo-config
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/lilo-config/ChangeLog,v 1.58 2008/06/05 22:40:59 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/lilo-config/ChangeLog,v 1.59 2008/06/07 12:37:21 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -lilo-config-3.5.8.ebuild, -lilo-config-4.0.2.ebuild,
+  -lilo-config-4.0.3.ebuild:
+  Removed old versions.
 
 *lilo-config-4.0.5 (05 Jun 2008)
 
