--- a/media-video/qt-faststart/ChangeLog
+++ b/media-video/qt-faststart/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/qt-faststart
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/qt-faststart/ChangeLog,v 1.1 2008/01/19 17:09:43 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/qt-faststart/ChangeLog,v 1.2 2008/06/07 12:59:48 caleb Exp $
+
+  07 Jun 2008; Caleb Tennis <caleb@gentoo.org> qt-faststart-0.1.ebuild:
+  amd64 stable
 
 *qt-faststart-0.1 (19 Jan 2008)
 
