--- a/net-zope/plone/ChangeLog
+++ b/net-zope/plone/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-zope/plone
 # Copyright 2003-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/ChangeLog,v 1.51 2008/06/06 23:42:16 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/ChangeLog,v 1.52 2008/06/07 13:08:27 nixnut Exp $
+
+  07 Jun 2008; nixnut <nixnut@gentoo.org> plone-2.5.5.ebuild:
+  Stable on ppc wrt bug 224735
 
   06 Jun 2008; Tupone Alfredo <tupone@gentoo.org> plone-2.5.5.ebuild:
   stable on amd64, bug #224735
