--- a/kde-base/artsplugin-mpg123/ChangeLog
+++ b/kde-base/artsplugin-mpg123/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/artsplugin-mpg123
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpg123/ChangeLog,v 1.52 2008/05/16 06:52:30 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpg123/ChangeLog,v 1.53 2008/06/07 14:03:57 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -artsplugin-mpg123-3.5.8.ebuild:
+  Removed old versions.
 
   16 May 2008; Markus Rothe <corsair@gentoo.org>
   artsplugin-mpg123-3.5.9.ebuild:
