--- a/kde-base/kverbos/ChangeLog
+++ b/kde-base/kverbos/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kverbos
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kverbos/ChangeLog,v 1.80 2008/05/18 17:10:56 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kverbos/ChangeLog,v 1.81 2008/06/07 14:08:21 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kverbos-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kverbos-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
