--- a/kde-base/kweather/ChangeLog
+++ b/kde-base/kweather/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kweather
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kweather/ChangeLog,v 1.95 2008/06/05 22:33:04 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kweather/ChangeLog,v 1.96 2008/06/07 14:09:11 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kweather-3.5.8.ebuild, -kweather-4.0.2.ebuild, -kweather-4.0.3.ebuild:
+  Removed old versions.
 
 *kweather-4.0.5 (05 Jun 2008)
 
