--- a/kde-base/klaptopdaemon/ChangeLog
+++ b/kde-base/klaptopdaemon/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/klaptopdaemon
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/klaptopdaemon/ChangeLog,v 1.101 2008/05/18 15:55:15 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/klaptopdaemon/ChangeLog,v 1.102 2008/06/07 14:10:02 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -klaptopdaemon-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> klaptopdaemon-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
