--- a/kde-base/kwifimanager/ChangeLog
+++ b/kde-base/kwifimanager/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kwifimanager
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kwifimanager/ChangeLog,v 1.67 2008/05/18 21:06:06 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kwifimanager/ChangeLog,v 1.68 2008/06/07 14:14:14 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kwifimanager-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kwifimanager-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
