--- a/kde-base/dcopjava/ChangeLog
+++ b/kde-base/dcopjava/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/dcopjava
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/dcopjava/ChangeLog,v 1.32 2008/05/19 23:32:03 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/dcopjava/ChangeLog,v 1.33 2008/06/07 14:15:55 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -dcopjava-3.5.8.ebuild:
+  Removed old versions.
 
   19 May 2008; Carsten Lohrke <carlo@gentoo.org> dcopjava-3.5.9.ebuild:
   Stable on amd64 and x86.
