--- a/kde-base/noatun-plugins/ChangeLog
+++ b/kde-base/noatun-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/noatun-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/noatun-plugins/ChangeLog,v 1.89 2008/05/18 21:25:53 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/noatun-plugins/ChangeLog,v 1.90 2008/06/07 14:18:06 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -noatun-plugins-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> noatun-plugins-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
