--- a/kde-base/kdemultimedia-kfile-plugins/ChangeLog
+++ b/kde-base/kdemultimedia-kfile-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdemultimedia-kfile-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kfile-plugins/ChangeLog,v 1.87 2008/05/18 16:46:35 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kfile-plugins/ChangeLog,v 1.88 2008/06/07 14:18:57 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdemultimedia-kfile-plugins-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   kdemultimedia-kfile-plugins-3.5.9.ebuild:
