--- a/kde-base/renamedlg-images/ChangeLog
+++ b/kde-base/renamedlg-images/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/renamedlg-images
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/renamedlg-images/ChangeLog,v 1.72 2008/05/18 18:21:46 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/renamedlg-images/ChangeLog,v 1.73 2008/06/07 14:22:20 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -renamedlg-images-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   renamedlg-images-3.5.9.ebuild:
