--- a/kde-base/kdesdk-scripts/ChangeLog
+++ b/kde-base/kdesdk-scripts/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdesdk-scripts
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-scripts/ChangeLog,v 1.75 2008/06/05 21:37:39 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-scripts/ChangeLog,v 1.76 2008/06/07 14:23:10 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdesdk-scripts-3.5.8.ebuild, -kdesdk-scripts-4.0.2.ebuild,
+  -kdesdk-scripts-4.0.3.ebuild:
+  Removed old versions.
 
 *kdesdk-scripts-4.0.5 (05 Jun 2008)
 
