--- a/kde-base/kdenetwork-kfile-plugins/ChangeLog
+++ b/kde-base/kdenetwork-kfile-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdenetwork-kfile-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork-kfile-plugins/ChangeLog,v 1.83 2008/05/18 16:24:38 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork-kfile-plugins/ChangeLog,v 1.84 2008/06/07 14:23:59 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdenetwork-kfile-plugins-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   kdenetwork-kfile-plugins-3.5.9.ebuild:
