--- a/kde-base/mimelib/ChangeLog
+++ b/kde-base/mimelib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/mimelib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/mimelib/ChangeLog,v 1.82 2008/05/18 14:52:52 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/mimelib/ChangeLog,v 1.83 2008/06/07 14:24:51 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -mimelib-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> mimelib-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
