--- a/kde-base/kdemultimedia-kappfinder-data/ChangeLog
+++ b/kde-base/kdemultimedia-kappfinder-data/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdemultimedia-kappfinder-data
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kappfinder-data/ChangeLog,v 1.84 2008/05/18 16:47:54 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kappfinder-data/ChangeLog,v 1.85 2008/06/07 14:29:11 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdemultimedia-kappfinder-data-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   kdemultimedia-kappfinder-data-3.5.9.ebuild:
