--- a/kde-base/kde-i18n/ChangeLog
+++ b/kde-base/kde-i18n/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kde-i18n
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-i18n/ChangeLog,v 1.158 2008/05/18 15:23:21 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-i18n/ChangeLog,v 1.159 2008/06/07 14:30:03 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kde-i18n-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kde-i18n-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
