--- a/kde-base/mpeglib/ChangeLog
+++ b/kde-base/mpeglib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/mpeglib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/mpeglib/ChangeLog,v 1.62 2008/05/29 14:07:22 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/mpeglib/ChangeLog,v 1.63 2008/06/07 14:37:43 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -mpeglib-3.5.8.ebuild:
+  Removed old versions.
 
   29 May 2008; Christian Faulhammer <opfer@gentoo.org> mpeglib-3.5.9.ebuild:
   stable x86, bug 221063
