--- a/app-misc/beagle/ChangeLog
+++ b/app-misc/beagle/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/beagle
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/beagle/ChangeLog,v 1.77 2008/05/30 20:01:33 cedk Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/beagle/ChangeLog,v 1.78 2008/06/07 14:40:09 cedk Exp $
+
+*beagle-0.3.7-r1 (07 Jun 2008)
+
+  07 Jun 2008; Cédric Krier <cedk@gentoo.org>
+  +files/beagle-0.3.7-evo-sharp.patch, -beagle-0.3.7.ebuild,
+  +beagle-0.3.7-r1.ebuild:
+  Add evo-sharp patch from redhat for bug #224621
 
 *beagle-0.3.7 (28 May 2008)
 
