--- a/kde-base/artsplugin-xine/ChangeLog
+++ b/kde-base/artsplugin-xine/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/artsplugin-xine
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-xine/ChangeLog,v 1.78 2008/05/18 18:55:59 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-xine/ChangeLog,v 1.79 2008/06/07 14:46:34 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -artsplugin-xine-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   artsplugin-xine-3.5.9.ebuild:
