--- a/kde-base/kbabel/ChangeLog
+++ b/kde-base/kbabel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kbabel
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kbabel/ChangeLog,v 1.74 2008/05/18 18:50:28 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kbabel/ChangeLog,v 1.75 2008/06/07 14:49:14 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kbabel-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kbabel-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
