--- a/kde-base/kaudiocreator/ChangeLog
+++ b/kde-base/kaudiocreator/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kaudiocreator
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kaudiocreator/ChangeLog,v 1.91 2008/05/18 21:10:47 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kaudiocreator/ChangeLog,v 1.92 2008/06/07 14:51:48 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kaudiocreator-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kaudiocreator-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
