--- a/kde-base/kjsembed/ChangeLog
+++ b/kde-base/kjsembed/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kjsembed
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kjsembed/ChangeLog,v 1.86 2008/06/07 15:25:04 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kjsembed/ChangeLog,v 1.87 2008/06/08 15:08:45 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kjsembed-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
   -kjsembed-3.5.8.ebuild:
