--- a/kde-base/kalyptus/ChangeLog
+++ b/kde-base/kalyptus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kalyptus
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kalyptus/ChangeLog,v 1.60 2008/06/08 06:53:27 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kalyptus/ChangeLog,v 1.61 2008/06/08 15:09:10 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kalyptus-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   08 Jun 2008; Jeroen Roovers <jer@gentoo.org> kalyptus-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
