--- a/kde-base/kuiviewer/ChangeLog
+++ b/kde-base/kuiviewer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kuiviewer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.78 2008/06/07 17:06:23 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kuiviewer/ChangeLog,v 1.79 2008/06/08 15:10:32 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kuiviewer-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   07 Jun 2008; Jeroen Roovers <jer@gentoo.org> kuiviewer-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
