--- a/kde-base/kspy/ChangeLog
+++ b/kde-base/kspy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kspy
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kspy/ChangeLog,v 1.57 2008/06/08 05:53:35 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kspy/ChangeLog,v 1.58 2008/06/08 15:10:57 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kspy-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   08 Jun 2008; Jeroen Roovers <jer@gentoo.org> kspy-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
