--- a/kde-base/kmtrace/ChangeLog
+++ b/kde-base/kmtrace/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kmtrace
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmtrace/ChangeLog,v 1.62 2008/06/07 19:26:31 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmtrace/ChangeLog,v 1.63 2008/06/08 15:11:48 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kmtrace-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   07 Jun 2008; Jeroen Roovers <jer@gentoo.org> kmtrace-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
