--- a/kde-base/kdesdk-scripts/ChangeLog
+++ b/kde-base/kdesdk-scripts/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdesdk-scripts
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-scripts/ChangeLog,v 1.77 2008/06/08 00:51:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-scripts/ChangeLog,v 1.78 2008/06/08 15:12:14 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org>
+  kdesdk-scripts-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   08 Jun 2008; Jeroen Roovers <jer@gentoo.org> kdesdk-scripts-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
