--- a/kde-base/kdesdk-misc/ChangeLog
+++ b/kde-base/kdesdk-misc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdesdk-misc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-misc/ChangeLog,v 1.64 2008/06/07 21:45:11 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-misc/ChangeLog,v 1.65 2008/06/08 15:12:40 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kdesdk-misc-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   07 Jun 2008; Jeroen Roovers <jer@gentoo.org> kdesdk-misc-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
