--- a/kde-base/kdesdk-kfile-plugins/ChangeLog
+++ b/kde-base/kdesdk-kfile-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdesdk-kfile-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-kfile-plugins/ChangeLog,v 1.66 2008/06/07 21:30:43 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-kfile-plugins/ChangeLog,v 1.67 2008/06/08 15:13:06 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org>
+  kdesdk-kfile-plugins-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   07 Jun 2008; Jeroen Roovers <jer@gentoo.org>
   kdesdk-kfile-plugins-3.5.9.ebuild:
