--- a/kde-base/kbugbuster/ChangeLog
+++ b/kde-base/kbugbuster/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kbugbuster
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.83 2008/06/08 00:51:51 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.84 2008/06/08 15:13:59 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kbugbuster-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   08 Jun 2008; Jeroen Roovers <jer@gentoo.org> kbugbuster-3.5.9.ebuild:
   Stable for HPPA (bug #221063).
