--- a/kde-base/kmrml/ChangeLog
+++ b/kde-base/kmrml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kmrml
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmrml/ChangeLog,v 1.77 2008/06/07 12:00:28 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmrml/ChangeLog,v 1.78 2008/06/08 15:16:15 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kmrml-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kmrml-3.5.8.ebuild:
   Removed old versions.
