--- a/kde-base/kdat/ChangeLog
+++ b/kde-base/kdat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdat
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdat/ChangeLog,v 1.72 2008/06/07 10:51:46 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdat/ChangeLog,v 1.73 2008/06/08 15:16:41 armin76 Exp $
+
+  08 Jun 2008; Raúl Porcel <armin76@gentoo.org> kdat-3.5.9.ebuild:
+  alpha/sparc stable wrt #221063
 
   07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kdat-3.5.8.ebuild:
   Removed old versions.
