--- a/x11-misc/google-gadgets/ChangeLog
+++ b/x11-misc/google-gadgets/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for x11-misc/google-gadgets
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/google-gadgets/ChangeLog,v 1.1 2008/06/06 16:51:12 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/google-gadgets/ChangeLog,v 1.2 2008/06/08 15:49:55 loki_val Exp $
+
+*google-gadgets-0.9.2-r1 (08 Jun 2008)
+
+  08 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
+  +files/google-gadgets-0.9.2-gcc43-test.patch,
+  -google-gadgets-0.9.2.ebuild, +google-gadgets-0.9.2-r1.ebuild:
+  New ebuild with Desktop entries and fix for bug 225361.
 
 *google-gadgets-0.9.2 (06 Jun 2008)
 
