--- a/app-cdr/serpentine/ChangeLog
+++ b/app-cdr/serpentine/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-cdr/serpentine
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/serpentine/ChangeLog,v 1.19 2008/06/08 10:02:14 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/serpentine/ChangeLog,v 1.20 2008/06/08 17:44:20 drac Exp $
+
+*serpentine-0.9-r2 (08 Jun 2008)
+
+  08 Jun 2008; Samuli Suominen <drac@gentoo.org> -serpentine-0.9-r1.ebuild,
+  +serpentine-0.9-r2.ebuild:
+  Revision bump with no changes so all users get eautoreconfed version.
 
 *serpentine-0.9-r1 (08 Jun 2008)
 
