--- a/app-portage/portato/ChangeLog
+++ b/app-portage/portato/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/portato
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portato/ChangeLog,v 1.8 2008/05/21 18:37:38 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portato/ChangeLog,v 1.9 2008/06/08 18:04:19 jokey Exp $
+
+  08 Jun 2008; Markus Ullmann <jokey@gentoo.org> metadata.xml:
+  Update metadata
 
   21 May 2008; Markus Ullmann <jokey@gentoo.org> portato-0.10.ebuild:
   Fix dependency for bug #219410
