--- a/profiles/default-bsd/ChangeLog
+++ b/profiles/default-bsd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default-bsd/ChangeLog,v 1.22 2008/04/02 23:33:03 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default-bsd/ChangeLog,v 1.23 2008/06/08 19:24:40 the_paya Exp $
+
+  08 Jun 2008; Javier Villavicencio <the_paya@gentoo.org>
+  fbsd/6.2/package.mask:
+  Mask py-freebsd with 7.0 support from 6.2 profile.
 
   02 Apr 2008; Mart Raudsepp <leio@gentoo.org> package.use.mask:
   USE mask mythtv on gst-plugins-meta - dependency not keyworded
