--- a/media-fonts/freefont-ttf/ChangeLog
+++ b/media-fonts/freefont-ttf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/freefont-ttf
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/freefont-ttf/ChangeLog,v 1.8 2008/06/07 10:12:33 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/freefont-ttf/ChangeLog,v 1.9 2008/06/08 21:32:25 ken69267 Exp $
+
+  08 Jun 2008; Kenneth Prugh <ken69267@gentoo.org>
+  freefont-ttf-20080323.ebuild:
+  amd64 stable, bug #224869
 
   07 Jun 2008; Raúl Porcel <armin76@gentoo.org>
   freefont-ttf-20080323.ebuild:
