--- a/games-strategy/wormux/ChangeLog
+++ b/games-strategy/wormux/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-strategy/wormux
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/wormux/ChangeLog,v 1.20 2008/02/29 19:49:37 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/wormux/ChangeLog,v 1.21 2008/06/08 21:38:32 mr_bones_ Exp $
+
+*wormux-0.8 (08 Jun 2008)
+
+  08 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org> +wormux-0.8.ebuild:
+  version bump - ebuild submitted by Tomáš Chvátal via bug #223091
 
   29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> ChangeLog:
   Remove icon extension from desktop entry to match Icon Theme Specification.
